Fixed location position and fixed nav overflow problem

--- a/_sass/_includes.scss
+++ b/_sass/_includes.scss
@@ -1,5 +1,5 @@
 .location {
-  position: absolute;
+  position: fixed;
   display: flex;
   align-items: center;
   bottom: 20px;
